@@ -432,4 +432,7 @@ Ramon van der Aar <rvda@itsec-ps.nl>
 Jack Steven Kelliher <kelliher@xmission.com>
   XvMC support
   
+Wang WenRui <wangwr@ustc.edu>
+  encoding of URL with multibyte characters in MMS
+
 (let us know if we've forgotten anyone)
